--- a/messaging/templates/messaging/send_message.html
+++ b/messaging/templates/messaging/send_message.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<form class="space-y-8 divide-y divide-gray-200 lg:w-1/2 mx-auto" method="POST" action="{% url 'message_sent' %}">
+<form class="space-y-8 divide-y divide-gray-200 lg:w-1/2 mx-auto" method="POST" action="{% url 'message_sent' %}" id="sendMessage">
   <div class="space-y-8 divide-y divide-gray-200">
     <div>
       <div>
@@ -54,7 +54,7 @@
       </div>
 
       <div class="flex justify-end mt-6">
-        <button type="submit" id="sms-preview"
+        <button type="submit" id="submit-button"
           class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
           Pay & Send
         </button>
@@ -63,6 +63,22 @@
     </div>
   </div>
 </form>
+
+<div class="fixed z-10 inset-0 overflow-y-auto hidden" aria-labelledby="modal-title" role="dialog" aria-modal="true" id="loading-overlay">
+  <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+    <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+    <!-- This element is to trick the browser into centering the modal contents. -->
+    <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+    <div class="inline-block px-4 pt-5 pb-4 overflow-hidden transform transition-all sm:my-8 align-middle sm:max-w-sm sm:w-full sm:p-6">
+      <div>
+        <div>
+          <div style="border-top-color:transparent"
+              class="mx-auto w-32 h-32 border-4 border-blue-400 border-solid rounded-full animate-spin"></div>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
 {% block postloadjs %}
@@ -84,10 +100,10 @@
     var errorDiv = document.getElementById('card-errors');
     if (event.error) {
       var html = `
-        <span class="icon" role="alert">
-            <i class="fas fa-times"></i>
-        </span>
-        <span>${event.error.message}</span>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-red-500 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+        </svg>
+        <span class="mt-2 text-sm text-red-500">${even.error.message}</span>
         `;
       errorDiv.innherHTML = html;
     } else {
@@ -97,13 +113,13 @@
 
 
   // PAYMENT INTENT WITHIN STRIPE
-  var form = document.getElementById('signup-form');
+  var form = document.getElementById('sendMessage');
 
   form.addEventListener('submit', function (ev) {
     ev.preventDefault();
-    console.log('button pressed');
     card.update({ 'disabled': true });
     document.getElementById('submit-button').disabled = true;
+    document.getElementById('loading-overlay').classList.remove('hidden');
     stripe.confirmCardPayment(clientSecret, {
       payment_method: {
         card: card,
@@ -112,15 +128,15 @@
       if (result.error) {
         var errorDiv = document.getElementById('card-errors');
         var html = `
-          <span class="icon" role="alert">
-              <i class="fas fa-times"></i>
-          </span>
-          <span>${result.error.message}</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-red-500 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+          </svg>
+          <span class="mt-2 text-sm text-red-500">${result.error.message}</span>
         `;
         errorDiv.innerHTML = html;
+        document.getElementById('loading-overlay').classList.add('hidden');
         card.update({ 'disabled': false });
         document.getElementById('submit-button').disabled = false;
-        console.log(result.error.message);
       } else {
         if (result.paymentIntent.status === 'succeeded') {
           form.submit();
