--- a/theme/templates/allauth/account/password_reset.html
+++ b/theme/templates/allauth/account/password_reset.html
@@ -34,16 +34,17 @@
                 {% include "account/snippets/already_logged_in.html" %}
                 {% endif %}
 
-                <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail
-                    allowing you to reset it." %}</p>
+                <p class="mb-3">Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</p>
 
                 <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
                     {% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" value="{% trans 'Reset My Password' %}" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" />
+                    {{ form|crispy }}
+                    <div class="pt-5">
+                    <input type="submit" value="{% trans 'Reset My Password' %}" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" />
+                </div>
                 </form>
 
-                <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
+                <p class="mt-3">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
                 </p>
             </div>
         </div>
