--- a/website/templates/website/pricing.html
+++ b/website/templates/website/pricing.html
@@ -33,18 +33,18 @@
     <div class="pb-16 xl:flex xl:items-center xl:justify-between">
       <div>
         <h1 class="text-4xl font-extrabold sm:text-5xl sm:tracking-tight">
-          <span class="text-gray-900">Everything for </span>
-          <span class="text-indigo-600">€{% if primary_string == '100' %}{{ primary_string }}{% else %}<strike>100</strike>{{ primary_string}}{% endif %}</span>
+          <span class="text-gray-900">Everything for just</span>
+          <span class="text-indigo-600">€19 a month</span>
         </h1>
-        <p class="mt-5 text-xl text-gray-500">Includes every feature we offer {{ secondary_string }}.</p>
+        <p class="mt-5 text-xl text-gray-500">Includes every feature we offer with unlimited bookings and guests.</p>
       </div>
-      <a href="{% url 'signup_email' plan monthly %}" class="mt-8 w-full bg-indigo-600 border border-transparent px-5 py-3 inline-flex items-center justify-center text-base font-medium rounded-md text-white hover:bg-indigo-700 sm:mt-10 sm:w-auto xl:mt-0">Get started today</a>
+      <a href="{% url 'signup' plan monthly %}" class="mt-8 w-full bg-indigo-600 border border-transparent px-5 py-3 inline-flex items-center justify-center text-base font-medium rounded-md text-white hover:bg-indigo-700 sm:mt-10 sm:w-auto xl:mt-0">Get started today</a>
     </div>
     <div class="border-t border-gray-200 pt-16 xl:grid xl:grid-cols-3 xl:gap-x-8">
       <div>
         <h2 class="text-base font-semibold text-blue-600 uppercase tracking-wide">Everything you need</h2>
         <p class="mt-2 text-3xl font-extrabold text-gray-900">All-in-one platform</p>
-        <p class="mt-4 text-lg text-gray-500">Features to cover everything you need to manage your bookings. From guest profiles and booking management to automated messaging and comprehensive marketing campaigns.</p>
+        <p class="mt-4 text-lg text-gray-500">Features to cover everything you need to manage your bookings. From guest profiles and booking management to filtered SMS marketing campaigns.</p>
       </div>
       <div class="mt-4 sm:mt-8 md:mt-10 md:grid md:grid-cols-2 md:gap-x-8 xl:mt-0 xl:col-span-2">
         <ul role="list" class="divide-y divide-gray-200">
@@ -69,7 +69,7 @@
             <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
             </svg>
-            <span class="ml-3 text-base text-gray-500">Automated Messaging.</span>
+            <span class="ml-3 text-base text-gray-500">Guest Notes.</span>
           </li>
 
           <li class="py-4 flex">
@@ -77,7 +77,7 @@
             <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
             </svg>
-            <span class="ml-3 text-base text-gray-500">Email & SMS Marketing.</span>
+            <span class="ml-3 text-base text-gray-500">SMS Marketing.</span>
           </li>
 
           <li class="py-4 flex">
@@ -94,7 +94,7 @@
             <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
             </svg>
-            <span class="ml-3 text-base text-gray-500">Team Management.</span>
+            <span class="ml-3 text-base text-gray-500">8c per SMS.</span>
           </li>
 
           <li class="py-4 flex">
@@ -102,7 +102,7 @@
             <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
             </svg>
-            <span class="ml-3 text-base text-gray-500">Confirmations.</span>
+            <span class="ml-3 text-base text-gray-500">Allergens.</span>
           </li>
 
           <li class="py-4 flex">
@@ -110,7 +110,7 @@
             <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
             </svg>
-            <span class="ml-3 text-base text-gray-500">Reminders.</span>
+            <span class="ml-3 text-base text-gray-500">Table Management.</span>
           </li>
 
           <li class="py-4 flex">
@@ -118,7 +118,7 @@
             <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
             </svg>
-            <span class="ml-3 text-base text-gray-500">Reviews.</span>
+            <span class="ml-3 text-base text-gray-500">Rate your Guests.</span>
           </li>
 
           <li class="py-4 flex">
@@ -126,7 +126,7 @@
             <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
             </svg>
-            <span class="ml-3 text-base text-gray-500">No-Show & Cancellations.</span>
+            <span class="ml-3 text-base text-gray-500">Restaurant Dashboard.</span>
           </li>
         </ul>
       </div>
