--- a/theme/templates/includes/components/empty_state.html
+++ b/theme/templates/includes/components/empty_state.html
@@ -13,7 +13,7 @@
                     </p>
                     <div class="mt-6">
                         <a href="{{ url }}"
-                            class="items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                            class="items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                             {{ empty.action }}
                         </a>
                     </div>
