--- a/guests/templates/guests/guest_detail.html
+++ b/guests/templates/guests/guest_detail.html
@@ -17,7 +17,7 @@
 
 {% block primary-cta %}
 <a href="{% url 'add_booking' guest.id %}"
-    class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-700 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700">
+    class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-700 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700">
     <svg xmlns="http://www.w3.org/2000/svg" class="mr-1 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
         <path fill-rule="evenodd"
             d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
@@ -52,13 +52,13 @@
                         </div>
                     </div>
                     <!-- Submit or cancel -->
-                    <div class="px-4 py-3 bg-indigo-50 text-right sm:px-6">
+                    <div class="px-4 py-3 bg-blue-50 text-right sm:px-6">
                         <a type="button" href="{% url 'guests' %}"
-                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-indigo-700 hover:text-black">
+                            class="inline-flex items-center px-4 py-2 text-sm font-medium text-blue-700 hover:text-black">
                             Cancel
                         </a>
                         <button type="submit"
-                            class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                            class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                             Save
                         </button>
                     </div>
@@ -92,9 +92,9 @@
                         <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
                             {{ notes_form|crispy }}
                         </div>
-                        <div class="px-4 py-3 bg-indigo-50 text-right sm:px-6">
+                        <div class="px-4 py-3 bg-blue-50 text-right sm:px-6">
                             <button type="submit"
-                                class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                                class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                                 Save
                             </button>
                         </div>
@@ -118,73 +118,16 @@
                         Stats
                     </h3>
                     <p class="mt-1 text-sm text-gray-600">
-                        Decide which communications you'd like to receive and how.
+                        Key statistics on your guest and all of their bookings.
                     </p>
                 </div>
             </div>
             <div class="mt-5 md:mt-0 md:col-span-2">
-                <form action="#" method="POST">
                     <div class="shadow sm:rounded-md sm:overflow-hidden">
                         <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
-                            <dl class="my-5 grid grid-cols-1 gap-5 lg:grid-cols-3">
-                                <div class="px-4 py-2 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
-                                    <dt class="text-sm font-medium text-yellow-50 uppercase">
-                                        Guest Age
-                                    </dt>
-                                    <dd class="mt-1 text-3xl font-semibold text-yellow-50">
-                                        {{ stats.guest_age }}
-                                    </dd>
-                                </div>
-
-                                <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
-                                    <dt class="text-sm font-medium text-yellow-50 uppercase">
-                                        Total Bookings
-                                    </dt>
-                                    <dd class="mt-1 text-3xl font-semibold text-yellow-50">
-                                        {{ stats.total_bookings }}
-                                    </dd>
-                                </div>
-
-                                <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
-                                    <dt class="text-sm font-medium text-yellow-50 uppercase">
-                                        Total Sales
-                                    </dt>
-                                    <dd class="mt-1 text-3xl font-semibold text-yellow-50">
-                                        €{{ stats.total_sales|floatformat }}
-                                    </dd>
-                                </div>
-                            </dl>
-                            <dl class="my-5 grid grid-cols-1 gap-5 lg:grid-cols-3">
-                                <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
-                                    <dt class="text-sm font-medium text-yellow-50 uppercase">
-                                        % NO-SHOW BOOKINGS
-                                    </dt>
-                                    <dd class="mt-1 text-3xl font-semibold text-yellow-50">
-                                        {{ stats.no_show_percentage|floatformat }}%
-                                    </dd>
-                                </div>
-
-                                <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
-                                    <dt class="text-sm font-medium text-yellow-50 uppercase">
-                                        % BOOKINGS COMPLETED
-                                    </dt>
-                                    <dd class="mt-1 text-3xl font-semibold text-yellow-50">
-                                        {{ stats.completed_percentage|floatformat }}%
-                                    </dd>
-                                </div>
-
-                                <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
-                                    <dt class="text-sm font-medium text-yellow-50 uppercase">
-                                        AVERAGE BOOKING VALUE
-                                    </dt>
-                                    <dd class="mt-1 text-3xl font-semibold text-yellow-50">
-                                        €{{ stats.avg_booking_value|floatformat }}
-                                    </dd>
-                                </div>
-                            </dl>
+                            {% include 'includes/components/stat_card.html' %}
                         </div>
                     </div>
-                </form>
             </div>
         </div>
     </div>
@@ -215,7 +158,7 @@
                             <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
                                 {% if bookings %}
                                 <table class="min-w-full divide-y divide-gray-200">
-                                    <thead class="bg-indigo-700">
+                                    <thead class="bg-blue-700">
                                         <tr>
                                             <th scope="col"
                                                 class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">
@@ -240,7 +183,7 @@
                                         <tr class="bg-white">
                                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
                                                 <a href="{% url 'edit_booking' booking.id %}"
-                                                    class="text-indigo-600 hover:text-indigo-900">
+                                                    class="text-blue-600 hover:text-blue-900">
                                                     {{ booking.written_date }}
                                                 </a>
                                             </td>
