--- a/messaging/templates/messaging/index.html
+++ b/messaging/templates/messaging/index.html
@@ -93,30 +93,11 @@
 </div>
 
 {% else %}
-<div class="text-center p-12 bg-white">
-  <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto h-12 w-12 text-gray-400" fill="none" viewBox="0 0 24 24"
-    stroke="currentColor">
-    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-      d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
-  </svg>
-  <h3 class="mt-2 text-sm font-medium text-gray-900">No Guests Available</h3>
-  <p class="mt-1 text-sm text-gray-500">
-    You need to add guests to send messages.
-  </p>
-  <div class="mt-6">
-    <a href="{% url 'add_guest' %}"
-      class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-      <!-- Heroicon name: solid/plus -->
-      <svg class="-ml-1 mr-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-        aria-hidden="true">
-        <path fill-rule="evenodd"
-          d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
-          clip-rule="evenodd" />
-      </svg>
-      Add Guest
-    </a>
-  </div>
-</div>
+
+<!-- Empty State -->
+{% url 'add_guest' as url %}
+{% include 'includes/components/empty_state.html' with url=url %}
+
 {% endif %}
 
 
